--- a/app.less
+++ b/app.less
@@ -5,10 +5,12 @@ page, view, text, swiper, swiper-item, image, navigator {
   margin: 0;
   box-sizing: border-box;
 }
-
 page {
   /*定义主题颜色*/
   //@themeColor:#ed4450;
   --themeColor:#ed4450;
   font-size:28rpx;
+}
+image{
+  width: 100%;
 }
