自定义组件

--- a/components/SearchInput/SearchInput.less
+++ b/components/SearchInput/SearchInput.less
@@ -1,10 +1,10 @@
-@import "../../app";
+//@import "../../app";
 .search_input {
   height: 90rpx;
   padding: 10rpx;
   background-color: var(--themeColor);
 
-  navigator {
+  .search_nav{
     height: 100%;
     display: flex;
     justify-content: center;
