--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -26,7 +26,7 @@
               wx:for="{{floorList}}"
               wx:for-item="item1"
               wx:for-index="index1"
-              wx:key="floor_title">
+              wx:key="name">
             <!--标题-->
             <view class="floor_title">
                 <image mode="widthFix" src="{{item1.floor_title.image_src}}"></image>
