--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -29,7 +29,8 @@
                     <navigator wx:for="{{item1.children}}"
                                wx:for-index="index2"
                                wx:for-item="item2"
-                               wx:key="cat_id">
+                               wx:key="cat_id"
+                               url="/pages/goods_list/goods_list?cid={{item2.cat_id}}">
                         <image src="{{item2.cat_icon}}" mode="widthFix"></image>
                         <view class="goods_name">{{item2.cat_name}}</view>
                     </navigator>
