--- a/pages/goods_list/goods_list.wxml
+++ b/pages/goods_list/goods_list.wxml
@@ -1,2 +1,3 @@
-<!--pages/goods_list/goods_list.wxml-->
-<text>pages/goods_list/goods_list.wxml</text>
+<SearchInput></SearchInput>
+<!--监听 自定义事件-->
+<tabs tabs="{{tabs}}" bindtabsItemChange="tabsItemChange"></tabs>
