--- a/pages/goods_list/goods_list.less
+++ b/pages/goods_list/goods_list.less
@@ -1,1 +1,42 @@
 @import "../../app";
+
+.first_tab {
+  .goods_item {
+    display: flex;
+    border-bottom: 1rpx solid #ccc;
+    /*左边盒子*/
+
+    .goods_img_wrap {
+      flex: 2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      image {
+        width: 70%;
+      }
+    }
+
+    /*右边盒子*/
+
+    .goods_info_wrap {
+      flex: 3;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+
+      .goods_name {
+        display: -webkit-box;
+        overflow: hidden;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+      }
+
+      .goods_price {
+        color: var(--themeColor);
+        font-size: 32rpx;
+      }
+    }
+  }
+
+}
