--- a/pages/goods_list/goods_list.wxml
+++ b/pages/goods_list/goods_list.wxml
@@ -7,7 +7,8 @@
                        wx:for="{{goodsList}}"
                        wx:for-index="index1"
                        wx:for-item="item1"
-                       wx:key="goods_id">
+                       wx:key="goods_id"
+                       url="/pages/goods_detail/goods_detail?goods_id={{item1.goods_id}}">
                 <!--图片容器-->
                 <view class="goods_img_wrap">
                     <image mode="widthFix"
