预览图片 购物车实现

--- a/app.less
+++ b/app.less
@@ -8,9 +8,10 @@ page, view, text, swiper, swiper-item, image, navigator {
 page {
   /*定义主题颜色*/
   //@themeColor:#ed4450;
-  --themeColor:#ed4450;
-  font-size:28rpx;
+  --themeColor: #ed4450;
+  --white: #f5f5f7;
+  font-size: 28rpx;
 }
-image{
+image {
   width: 100%;
 }
