--- a/pages/goods_detail/goods_detail.less
+++ b/pages/goods_detail/goods_detail.less
@@ -75,7 +75,7 @@ page {
   bottom: 0;
   width: 100%;
   height: 90rpx;
-  background-color: #fff;
+  background-color: var(--white);
   display: flex;
 
   .tool_item {
@@ -104,7 +104,7 @@ page {
     justify-content: center;
     align-items: center;
     background-color: #ffa500;
-    color: #fff;
+    color: var(--white);
     font-size: 30rpx;
     font-weight: 600;
   }
@@ -116,7 +116,7 @@ page {
     justify-content: center;
     align-items: center;
     background-color: #fa445b;
-    color: #fff;
+    color: var(--white);
     font-size: 30rpx;
     font-weight: 600;
   }
