--- a/pages/cart/cart.less
+++ b/pages/cart/cart.less
@@ -1,1 +1,114 @@
-/* pages/cart/cart.wxss */
+//@import "../../app";
+
+.receive_address_row {
+  .address_btn {
+    padding: 20rpx;
+
+    button {
+      width: 60%;
+    }
+  }
+
+  .user_info_row {
+    display: -webkit-flex;
+    display: flex;
+    padding: 20rpx;
+    font-size: 30rpx;
+
+    .user_info {
+      flex: 6;
+    }
+
+    .user_phone {
+      flex: 3;
+      //右对齐
+      text-align: right;
+    }
+  }
+
+}
+
+.cart_content {
+  .cart_title {
+    padding: 20rpx;
+    font: size 36rpx;
+    color: var(--themeColor);
+    border-top: 1rpx solid currentColor;
+    border-bottom: 1rpx solid currentColor;
+
+  }
+
+  .cart_main {
+    .cart_item {
+      display: flex;
+      padding: 10rpx;
+      border-bottom: 1rpx solid #ccc;
+
+      .cart_chk_warp {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+      }
+
+      .cat_img_warp {
+        flex: 2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        image {
+          width: 80%;
+        }
+      }
+
+      .cat_info_warp {
+        flex: 4;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+
+        .goods_name {
+          display: -webkit-box;
+          overflow: hidden;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 2;
+          color: #666;
+        }
+
+        .goods_price_warp {
+          display: flex;
+          justify-content: space-between;
+
+          .goods_price {
+            color: var(--themeColor);
+            font-size: 34rpx;
+          }
+
+          .cart_num_tool {
+            display: flex;
+
+            .num_edit {
+              width: 55rpx;
+              height: 55rpx;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              border: 1rpx solid #ccc;
+            }
+
+            .goods_num {
+              width: 55rpx;
+              height: 55rpx;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              //border: 1rpx solid #3c3c3c ;
+            }
+          }
+        }
+      }
+    }
+  }
+}
