--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,2 +1,50 @@
 <!--pages/cart/cart.wxml-->
-<text>pages/cart/cart.wxml</text>
+        <!--收货地址容器-->
+<view class="receive_address_row">
+    <!--当收货地址不存在时按钮显示 对象的bool类型是true-->
+    <view class="address_btn" wx:if="{{!address.userName}}">
+        <button bindtap="handleChooseAddress" type="primary" plain="true">获取收货地址</button>
+    </view>
+    <!--收货地址存在时详细信息显示-->
+    <view wx:else class="user_info_row">
+        <view class="user_info">
+            <view>{{address.userName}}</view>
+            <!--使用缓存中的数据-->
+            <view>{{address.all}}</view>
+        </view>
+        <view class="user_phone">
+            {{address.telNumber}}
+        </view>
+    </view>
+</view>
+        <!--购物车内容-->
+<view class="cart_content">
+    <view class="cart_title">购物车</view>
+    <view class="cart_main">
+        <view class="cart_item">
+            <!--复选框-->
+            <view class="cart_chk_warp">
+                <checkbox-group>
+                    <checkbox></checkbox>
+                </checkbox-group>
+            </view>
+            <!--商品图片-->
+            <navigator class="cat_img_warp">
+                <image src="http://image2.suning.cn/uimg/b2c/newcatentries/0070078057-000000000634917020_1_400x400.jpg"
+                       mode="widthFix"></image>
+            </navigator>
+            <!--商品信息-->
+            <view class="cat_info_warp">
+                <view class="goods_name">babbababb</view>
+                <view class="goods_price_warp">
+                    <view class="goods_price">¥999</view>
+                    <view class="cart_num_tool">
+                        <view class="num_edit">-</view>
+                        <view class="goods_num">10</view>
+                        <view class="num_edit">+</view>
+                    </view>
+                </view>
+            </view>
+        </view>
+    </view>
+</view>
