--- a/pages/cart/cart.wxss
+++ b/pages/cart/cart.wxss
@@ -1,2 +1,103 @@
-/* pages/cart/cart.wxss */
+.receive_address_row .address_btn {
+    padding: 20rpx;
+}
+
+.receive_address_row .address_btn button {
+    width: 60%;
+}
+
+.receive_address_row .user_info_row {
+    display: -webkit-flex;
+    display: flex;
+    padding: 20rpx;
+    font-size: 30rpx;
+}
+
+.receive_address_row .user_info_row .user_info {
+    flex: 6;
+}
+
+.receive_address_row .user_info_row .user_phone {
+    flex: 3;
+    text-align: right;
+}
+
+.cart_content .cart_title {
+    padding: 20rpx;
+    font: size 36rpx;
+    color: var(--themeColor);
+    border-top: 1rpx solid currentColor;
+    border-bottom: 1rpx solid currentColor;
+}
+
+.cart_content .cart_main .cart_item {
+    display: flex;
+    padding: 10rpx;
+    border-bottom: 1rpx solid #ccc;
+}
+
+.cart_content .cart_main .cart_item .cart_chk_warp {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart_content .cart_main .cart_item .cat_img_warp {
+    flex: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart_content .cart_main .cart_item .cat_img_warp image {
+    width: 80%;
+}
+
+.cart_content .cart_main .cart_item .cat_info_warp {
+    flex: 4;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.cart_content .cart_main .cart_item .cat_info_warp .goods_name {
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    color: #666;
+}
+
+.cart_content .cart_main .cart_item .cat_info_warp .goods_price_warp {
+    display: flex;
+    justify-content: space-between;
+}
+
+.cart_content .cart_main .cart_item .cat_info_warp .goods_price_warp .goods_price {
+    color: var(--themeColor);
+    font-size: 34rpx;
+}
+
+.cart_content .cart_main .cart_item .cat_info_warp .goods_price_warp .cart_num_tool {
+    display: flex;
+}
+
+.cart_content .cart_main .cart_item .cat_info_warp .goods_price_warp .cart_num_tool .num_edit {
+    width: 55rpx;
+    height: 55rpx;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1rpx solid #ccc;
+}
+
+.cart_content .cart_main .cart_item .cat_info_warp .goods_price_warp .cart_num_tool .goods_num {
+    width: 55rpx;
+    height: 55rpx;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /*# sourceMappingURL=cart.wxss.map */
