--- a/pages/cart/cart.less
+++ b/pages/cart/cart.less
@@ -1,5 +1,7 @@
 //@import "../../app";
-
+page {
+  padding-bottom: 90rpx;
+}
 .receive_address_row {
   .address_btn {
     padding: 20rpx;
@@ -111,4 +113,54 @@
       }
     }
   }
+}
+
+.footer_tool {
+  //绝对定位
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 90rpx;
+  //background-color:var(--white);
+  background-color: #fafafa;
+  display: flex;
+  border-top: 1rpx solid #ccc;
+
+  .all_chk_wrap {
+    flex: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+  }
+
+  .total_price_wrap {
+    flex: 5;
+    text-align: right;
+    padding-right: 15rpx;
+
+    .total_price {
+      .total_price_text {
+        color: var(--themeColor);
+        font-size: 32rpx;
+        font-weight: 600;
+      }
+    }
+  }
+
+  .order_pay_wrap {
+    flex: 3;
+    background-color: var(--themeColor);
+    color: #fff;
+    font-size: 32rpx;
+    //加粗
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    //文本居中
+    align-items: center;
+  }
+
 }
