支付 待实现

--- a/pages/Search/Search.wxml
+++ b/pages/Search/Search.wxml
@@ -1,3 +1,2 @@
-<!--pages/Search/Search.wxml-->
-<text>pages/Search/Search.wxml</text>
-<input value="{{SearchData}}"></input>
+<!--pages/search/search.wxml-->
+<text>pages/search/search.wxml</text>
