--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -21,40 +21,48 @@
 <view class="cart_content">
     <view class="cart_title">购物车</view>
     <view class="cart_main">
-        <view class="cart_item"
-              wx:for="{{cart}}"
-              wx:key="goods_id">
-            <!--复选框-->
-            <view class="cart_chk_warp">
-                <checkbox-group data-id="{{item.goods_id}}" bindchange="handleItemChange">
-                    <checkbox checked="{{item.checked}}"></checkbox>
-                </checkbox-group>
-            </view>
-            <!--商品图片-->
-            <navigator class="cat_img_warp" url="pages/goods_detail/goods_detail"
-                       open-type="switchTab">
-                <image src="{{item.goods_big_logo}}"
-                       mode="widthFix"></image>
-            </navigator>
-            <!--商品信息-->
-            <view class="cat_info_warp">
-                <view class="goods_name">{{item.goods_name}}</view>
-                <view class="goods_price_warp">
-                    <view class="goods_price">¥{{item.goods_price}}</view>
-                    <view class="cart_num_tool">
-                        <view class="num_edit" bindtap="handleItemNumEdit"
-                              data-id="{{item.goods_id}}"
-                              data-operation="{{-1}}">-
-                        </view>
-                        <view class="goods_num">{{item.num}}</view>
-                        <view class="num_edit" bindtap="handleItemNumEdit"
-                              data-id="{{item.goods_id}}"
-                              data-operation="{{1}}">+
+        <!--当cart数组长度不为0的时候显示商品信息-->
+        <block wx:if="{{cart.length!==0}}">
+            <view class="cart_item"
+                  wx:for="{{cart}}"
+                  wx:key="goods_id">
+                <!--复选框-->
+                <view class="cart_chk_warp">
+                    <checkbox-group data-id="{{item.goods_id}}" bindchange="handleItemChange">
+                        <checkbox checked="{{item.checked}}"></checkbox>
+                    </checkbox-group>
+                </view>
+                <!--商品图片-->
+                <navigator class="cat_img_warp" url="pages/goods_detail/goods_detail"
+                           open-type="switchTab">
+                    <image src="{{item.goods_big_logo}}"
+                           mode="widthFix"></image>
+                </navigator>
+                <!--商品信息-->
+                <view class="cat_info_warp">
+                    <view class="goods_name">{{item.goods_name}}</view>
+                    <view class="goods_price_warp">
+                        <view class="goods_price">¥{{item.goods_price}}</view>
+                        <view class="cart_num_tool">
+                            <view class="num_edit" bindtap="handleItemNumEdit"
+                                  data-id="{{item.goods_id}}"
+                                  data-operation="{{-1}}">-
+                            </view>
+                            <view class="goods_num">{{item.num}}</view>
+                            <view class="num_edit" bindtap="handleItemNumEdit"
+                                  data-id="{{item.goods_id}}"
+                                  data-operation="{{1}}">+
+                            </view>
                         </view>
                     </view>
                 </view>
             </view>
-        </view>
+        </block>
+        <block wx:else>
+            <view class="hide_item">
+                <text class="hide_text">哎呀，购物车竟然是空的</text>
+            </view>
+        </block>
     </view>
 </view>
         <!--底部工具栏-->
@@ -74,7 +82,7 @@
         <view>包含运费</view>
     </view>
     <!--结算-->
-    <view class="order_pay_wrap">
+    <view class="order_pay_wrap" bindtap="handlePay">
         结算({{totalNum}})
     </view>
 </view>
