--- a/pages/cart/cart.wxss
+++ b/pages/cart/cart.wxss
@@ -76,25 +76,41 @@ page {
   height: 55rpx;
   display: flex;
   justify-content: center;
-  align-items: center;
-  border: 1rpx solid #ccc;
+    align-items: center;
+    border: 1rpx solid #ccc;
 }
+
 .cart_content .cart_main .cart_item .cat_info_warp .goods_price_warp .cart_num_tool .goods_num {
-  width: 55rpx;
-  height: 55rpx;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    width: 55rpx;
+    height: 55rpx;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.cart_content .cart_main .hide_item {
+    display: flex;
+    display: -webkit-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart_content .cart_main .hide_item .hide_text {
+    padding: 30rpx 0;
+    font-size: 32rpx;
+    font-weight: 600;
+    color: var(--themeColor);
+}
+
 .footer_tool {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 90rpx;
-  background-color: #fafafa;
-  display: flex;
-  border-top: 1rpx solid #ccc;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 90rpx;
+    background-color: #fafafa;
+    display: flex;
+    border-top: 1rpx solid #ccc;
 }
 .footer_tool .all_chk_wrap {
   flex: 2;
