--- a/pages/pay/pay.wxml
+++ b/pages/pay/pay.wxml
@@ -1,2 +1,59 @@
-<!--pages/pay/pay.wxml-->
-<text>pages/pay/pay.wxml</text>
+<!--收货地址容器-->
+<view class="receive_address_row">
+    <view class="user_info_row">
+        <view class="user_info">
+            <view>{{address.userName}}</view>
+            <!--使用缓存中的数据-->
+            <view>{{address.all}}</view>
+        </view>
+        <view class="user_phone">
+            {{address.telNumber}}
+        </view>
+    </view>
+</view>
+        <!--购物车内容-->
+<view class="cart_content">
+    <view class="cart_title">购物车</view>
+    <view class="cart_main">
+
+        <view class="cart_item"
+              wx:for="{{cart}}"
+              wx:key="goods_id">
+            <!--商品图片-->
+            <navigator class="cat_img_warp" url="pages/goods_detail/goods_detail"
+                       open-type="switchTab">
+                <image src="{{item.goods_big_logo}}"
+                       mode="widthFix"></image>
+            </navigator>
+            <!--商品信息-->
+            <view class="cat_info_warp">
+                <view class="goods_name">{{item.goods_name}}</view>
+                <view class="goods_price_warp">
+                    <view class="goods_price">¥{{item.goods_price}}</view>
+                    <view class="cart_num_tool">
+                        <view class="goods_num">X {{item.num}}</view>
+                    </view>
+                </view>
+            </view>
+        </view>
+        <block wx:if="{{cart.length===0}}">
+            <view class="hide_item">
+                <text class="hide_text">哎呀，购物车竟然是空的</text>
+            </view>
+        </block>
+    </view>
+</view>
+        <!--底部工具栏-->
+<view class="footer_tool">
+    <!--总价格-->
+    <view class="total_price_wrap">
+        <view class="total_price">
+            合计:<text class="total_price_text">¥{{totalPrice}}</text>
+        </view>
+        <view>包含运费</view>
+    </view>
+    <!--结算-->
+    <view class="order_pay_wrap" bindtap="">
+        支付({{totalNum}})
+    </view>
+</view>
