用户登陆 商品订单 已实现

--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -17,8 +17,8 @@
     <view class="goods_name">
         {{goodsObj.goods_name}}
     </view>
-    <view class="goods_collect">
-        <text class="iconfont icon-shoucang"></text>
+    <view class="goods_collect" bindtap="handleCollect">
+        <text class="iconfont {{isCollect?'icon-shoucang1':'icon-shoucang'}}"></text>
         <view class="collect_text">收藏</view>
     </view>
 </view>
@@ -48,7 +48,7 @@
     <view class="tool_item btm_cart" bindtap="handleCartAdd">
         加入购物车
     </view>
-    <view class="tool_item btn_buy">
+    <view class="tool_item btn_buy" bindtap="handleCartPurchase">
         立即购买
     </view>
 </view>
