--- a/pages/goods_detail/goods_detail.wxss
+++ b/pages/goods_detail/goods_detail.wxss
@@ -51,10 +51,10 @@ navigator {
   box-sizing: border-box;
 }
 page {
-    /*定义主题颜色*/
-    --themeColor: #ed4450;
-    --white: #f5f5f7;
-    font-size: 28rpx;
+  /*定义主题颜色*/
+  --themeColor: #ed4450;
+  --white: #f5f5f7;
+  font-size: 28rpx;
 }
 image {
   width: 100%;
@@ -91,6 +91,7 @@ page {
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
 }
+
 .goods_name_row .goods_collect {
   flex: 1;
   display: flex;
@@ -99,6 +100,11 @@ page {
   align-items: center;
   border-left: 1rpx solid #000;
 }
+
+.goods_name_row .goods_collect .icon-shoucang1 {
+  color: #ed3830;
+}
+
 .goods_info .goods_info_title {
   font-size: 32rpx;
   color: var(--themeColor);
@@ -106,14 +112,14 @@ page {
   padding: 20rpx;
 }
 .btm_tool {
-    border-top: 1rpx solid #ccc;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 90rpx;
-    background-color: var(--white);
-    display: flex;
+  border-top: 1rpx solid #ccc;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 90rpx;
+  background-color: var(--white);
+  display: flex;
 }
 .btm_tool .tool_item {
   flex: 1;
@@ -133,25 +139,25 @@ page {
   opacity: 0;
 }
 .btm_tool .btm_cart {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #ffa500;
-    color: var(--white);
-    font-size: 30rpx;
-    font-weight: 600;
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffa500;
+  color: var(--white);
+  font-size: 30rpx;
+  font-weight: 600;
 }
 .btm_tool .btn_buy {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #fa445b;
-    color: var(--white);
-    font-size: 30rpx;
-    font-weight: 600;
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fa445b;
+  color: var(--white);
+  font-size: 30rpx;
+  font-weight: 600;
 }
 /*# sourceMappingURL=goods_detail.wxss.map */
