--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,2 +1,28 @@
 <!--pages/order/order.wxml-->
-<text>pages/order/order.wxml</text>
+<tabs tabs="{{tabs}}" bindtabsItemChange="tabsItemChange">
+    <view class="order_main">
+        <view class="order_item"
+              wx:for="{{orders}}"
+              wx:key="order_id">
+            <view class="order_no_row">
+                <view class="order_no_text">订单编号</view>
+                <view class="order_no_value">{{item.order_number}}</view>
+            </view>
+            <view class="order_price_row">
+                <view class="order_price_text">订单价格</view>
+                <view class="order_price_value">¥ {{item.order_price}}</view>
+            </view>
+            <view class="order_item_row">
+                <view class="order_time_text">日期</view>
+                <view class="order_time_value">{{item.create_time_cn}}</view>
+            </view>
+
+        </view>
+    </view>
+    <!--    <block wx:if="{{tabs[0].isActive}}">-->
+
+    <!--    </block>-->
+    <!--    <block wx:elif="{{tabs[1].isActive}}">1</block>-->
+    <!--    <block wx:elif="{{tabs[2].isActive}}">2</block>-->
+    <!--    <block wx:elif="{{tabs[3].isActive}}">3</block>-->
+</tabs>
