--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -1,1 +1,31 @@
 /* pages/order/order.wxss */
+.order_main .order_item {
+    padding: 20rpx;
+    border-bottom: 1rpx solid #ccc;
+    color: #696d71;
+}
+
+.order_main .order_item .order_no_row {
+    padding: 10rpx 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.order_main .order_item .order_price_row {
+    padding: 10rpx 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.order_main .order_item .order_price_row .order_price_value {
+    color: var(--themeColor);
+    font-size: 32rpx;
+}
+
+.order_main .order_item .order_item_row {
+    padding: 10rpx 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+/*# sourceMappingURL=order.wxss.map */
