--- a/pages/Search/Search.wxss
+++ b/pages/Search/Search.wxss
@@ -1,1 +1,39 @@
 /* pages/search/search.wxss */
+page {
+  background-color: #dedede;
+  padding: 20rpx;
+}
+.search_row {
+  height: 70rpx;
+  display: flex;
+}
+.search_row input {
+  background-color: white;
+  flex: 1;
+  height: 100%;
+  padding-left: 30rpx;
+}
+.search_row button {
+  background-color: #fff;
+  width: 110rpx;
+  height: 100%;
+  font-size: 26rpx;
+  padding: 0;
+  margin: 0 10rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.search_content {
+  margin-top: 30rpx;
+}
+.search_content .search_item {
+  background-color: #fff;
+  font-size: 26rpx;
+  padding: 15rpx 10rpx;
+  border-bottom: 1rpx solid #ccc;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+/*# sourceMappingURL=search.wxss.map */
