--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -19,7 +19,7 @@
                 <view class="his_num">0</view>
                 <view class="his_name">收藏的店铺</view>
             </navigator>
-            <navigator>
+            <navigator url="/pages/collect/collect">
                 <view class="his_num">{{CollectNum}}</view>
                 <view class="his_name">收藏的商品</view>
             </navigator>
