--- a/pages/user/user.less
+++ b/pages/user/user.less
@@ -84,7 +84,6 @@ page {
         }
       }
 
-
     }
 
     //我的订单
@@ -161,6 +160,11 @@ page {
       border-bottom: 1rpx solid #ccc;
       font-weight: 600;
 
+    }
+    .user_out {
+      margin-top: 30rpx;
+      //color: var(--themeColor);
+      background-color: var(--themeColor);
     }
   }
 }
