--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -8,7 +8,7 @@
                 wx:key="pics_id"
                 bindtap="handlePreviewImage"
                 data-url="{{item.pics_mid}}">
-            <image mode="widthFix" src="{{item.pics_mid}}"></image>
+            <image mode="widthFix" src="{{item.pics_mid?item.pics_mid:'../../icon/NoImg.jpg'}}"></image>
         </swiper-item>
     </swiper>
 </view>
