--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -27,8 +27,8 @@
                 <view class="his_num">0</view>
                 <view class="his_name">关注的商品</view>
             </navigator>
-            <navigator>
-                <view class="his_num">0</view>
+            <navigator url="/pages/collect/collect?type=3">
+                <view class="his_num">{{Footprint}}</view>
                 <view class="his_name">我的足迹</view>
             </navigator>
         </view>
