--- a/pages/category/category.wxss
+++ b/pages/category/category.wxss
@@ -1,12 +1,249 @@
+/*
+此文件为开发者工具生成，生成时间: 2021/11/3 下午4:08:18
+
+在 /Users/caseycheng/tmp/WeChatRoot/test002/pages/category/category.wxss 中引入样式
+```
+@import "./category.skeleton.wxss";
+```
+
+更多详细信息可以参考文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/skeleton.html
+*/
+.sk-transparent {
+    color: transparent !important;
+}
+.sk-text-14-2857-177 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text {
+    background-origin: content-box !important;
+    background-clip: content-box !important;
+    background-color: transparent !important;
+    color: transparent !important;
+    background-repeat: repeat-y !important;
+}
+.sk-text-14-2857-676 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-878 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-478 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-573 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-362 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-366 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-500 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-415 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-3 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-376 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-411 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-908 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-448 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-686 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-8 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 42rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-322 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-55 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-702 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-604 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-719 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-807 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-741 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-801 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-545 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-421 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-130 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-27 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-576 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-254 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-674 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-395 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-668 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-635 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-476 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-250 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-971 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-68 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-871 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-571 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-text-14-2857-899 {
+    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
+    background-size: 100% 39.2rpx;
+    position: relative !important;
+}
+.sk-image {
+    background: #EFEFEF !important;
+}
+.sk-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: transparent;
+}
 page {
-  height: 100%;
+    height: 100%;
 }
 .cates {
-  height: 100%;
+    height: 100%;
 }
 .cates .cates_container {
-  height: calc( 100vh - 90rpx );
-  display: flex;
+    height: calc(100vh - 90rpx);
+    display: flex;
 }
 .cates .cates_container .left_menu {
   /*子项  高度 100%*/
